fixxed alignment issues in "#city-info"

--- a/style.css
+++ b/style.css
@@ -88,9 +88,9 @@ main {
   /* border: 2px solid coral; */
   flex-grow: 1;
   flex-basis: 0;
-  min-width: 220px;
+  min-width: 250px;
   max-width: 300px;
-  padding-right: 1.5rem;
+  padding-left: 1.5rem;
   /* position: inherit; */
 }
 
@@ -100,7 +100,6 @@ main {
   align-items: end;
   justify-items: stretch;
   column-gap: 0.75rem;
-  padding-left: 1.5rem;
 }
 
 #city-info > img {
